docs(v1.1): Add .gitignore and update README with full v1.1 documentation
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>